--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 
         select {
             background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%2300e5ff' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
-            background-position: left 0.5rem center; background-repeat: no-repeat; background-size: 1.5em 1.5em; padding-left: 2.5rem; appearance: none; -webkit-appearance: none; -moz-appearance: none;
+            background-position: left 0.5rem center; background-repeat: no-repeat; background-size: 1.5em; padding-left: 2.5rem; appearance: none; -webkit-appearance: none; -moz-appearance: none; cursor: pointer;
         }
+        select::-ms-expand { display: none; }
 
         #stats-area { border: 1px solid var(--border-color); background-color: rgba(15, 15, 46, 0.5); }
         .progress-bar-container { background-color: var(--background-light); border: 1px solid var(--border-color); height: 1.5rem; }
@@ -95,6 +96,9 @@
     </style>
 </head>
 <body class="min-h-screen flex flex-col">
+    <div id="loading-spinner" class="fixed inset-0 flex items-center justify-center bg-[var(--background-dark)]/50 hidden z-50">
+        <i class="fas fa-spinner fa-spin text-4xl text-[var(--primary-color)]"></i>
+    </div>
     <header class="p-4 border-b border-[var(--border-color)] text-center glow mb-6 sticky top-0 bg-[var(--background-medium)]/80 backdrop-blur-sm z-10">
         <h1 class="text-2xl md:text-3xl font-bold">[ سجل المهام ]</h1>
         <button id="logout-button" class="absolute top-3 right-3 btn btn-danger text-sm">تسجيل الخروج</button>
@@ -222,6 +226,7 @@
         const modalSubmitButton = document.getElementById('modal-submit-button');
         const noTasksMessage = document.getElementById('no-tasks-message');
         const logoutButton = document.getElementById('logout-button');
+        const loadingSpinner = document.getElementById('loading-spinner');
 
         const currentLevelElement = document.getElementById('current-level');
         const totalPointsElement = document.getElementById('total-points');
@@ -244,18 +249,49 @@
         let stats = { strength: 0, stamina: 0, intelligence: 0, agility: 0, general: 0 };
         let isStatsExpanded = JSON.parse(localStorage.getItem(STATS_EXPANDED_KEY)) || false;
 
-        // Check authentication
-        if (!localStorage.getItem('token')) {
-            window.location.href = '/sign-in.html';
+        // تحقق من صلاحية التوكن عند تحميل الصفحة
+        async function checkTokenValidity() {
+            showLoading();
+            try {
+                const response = await fetch('/api/stats', {
+                    headers: { 'Authorization': `Bearer ${localStorage.getItem('token')}` }
+                });
+                if (response.status === 401 || response.status === 403) {
+                    localStorage.removeItem('token');
+                    window.location.href = '/sign-in.html';
+                }
+            } catch (error) {
+                console.error('Token check failed:', error);
+                localStorage.removeItem('token');
+                window.location.href = '/sign-in.html';
+            } finally {
+                hideLoading();
+            }
         }
 
-        // Logout
+        // إدارة التحميل
+        function showLoading() {
+            loadingSpinner.classList.remove('hidden');
+        }
+
+        function hideLoading() {
+            loadingSpinner.classList.add('hidden');
+        }
+
+        // التحقق من المصادقة
+        if (!localStorage.getItem('token')) {
+            window.location.href = '/sign-in.html';
+        } else {
+            checkTokenValidity();
+        }
+
+        // تسجيل الخروج
         logoutButton.addEventListener('click', () => {
             localStorage.removeItem('token');
             window.location.href = '/sign-in.html';
         });
 
-        // Initialize
+        // تهيئة الواجهة
         applyInitialStatsVisibility();
         fetchTasks();
         fetchStats();
@@ -329,28 +365,37 @@
                 completed: false
             };
 
+            showLoading();
             try {
                 const response = await fetch('/api/tasks', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
+                        '():
                         'Authorization': `Bearer ${localStorage.getItem('token')}`
                     },
                     body: JSON.stringify(taskData)
                 });
                 if (response.ok) {
-                    fetchTasks();
+                    await fetchTasks();
                     hideModal();
+                } else if (response.status === 401 || response.status === 403) {
+                    localStorage.removeItem('token');
+                    window.location.href = '/sign-in.html';
                 } else {
-                    alert('خطأ أثناء إضافة المهمة');
+                    const errorData = await response.json();
+                    alert(errorData.error || 'خطأ أثناء إضافة المهمة');
                 }
             } catch (error) {
                 console.error('Error:', error);
                 alert('حدث خطأ. حاول مرة أخرى.');
+            } finally {
+                hideLoading();
             }
         }
 
         async function fetchTasks() {
+            showLoading();
             try {
                 const response = await fetch('/api/tasks', {
                     headers: { 'Authorization': `Bearer ${localStorage.getItem('token')}` }
@@ -358,16 +403,23 @@
                 if (response.ok) {
                     tasks = await response.json();
                     renderAllTasks();
+                } else if (response.status === 401 || response.status === 403) {
+                    localStorage.removeItem('token');
+                    window.location.href = '/sign-in.html';
                 } else {
-                    alert('خطأ أثناء جلب المهام');
+                    const errorData = await response.json();
+                    alert(errorData.error || 'خطأ أثناء جلب المهام');
                 }
             } catch (error) {
                 console.error('Error:', error);
                 alert('حدث خطأ. حاول مرة أخرى.');
+            } finally {
+                hideLoading();
             }
         }
 
         async function fetchStats() {
+            showLoading();
             try {
                 const response = await fetch('/api/stats', {
                     headers: { 'Authorization': `Bearer ${localStorage.getItem('token')}` }
@@ -378,12 +430,18 @@
                     currentLevel = data.currentLevel;
                     stats = data.stats;
                     updateStatsDisplay();
+                } else if (response.status === 401 || response.status === 403) {
+                    localStorage.removeItem('token');
+                    window.location.href = '/sign-in.html';
                 } else {
-                    alert('خطأ أثناء جلب الإحصائيات');
+                    const errorData = await response.json();
+                    alert(errorData.error || 'خطأ أثناء جلب الإحصائيات');
                 }
             } catch (error) {
                 console.error('Error:', error);
                 alert('حدث خطأ. حاول مرة أخرى.');
+            } finally {
+                hideLoading();
             }
         }
 
@@ -473,37 +531,51 @@
         }
 
         async function completeTask(taskId) {
+            showLoading();
             try {
                 const response = await fetch(`/api/tasks/${taskId}/complete`, {
                     method: 'PATCH',
                     headers: { 'Authorization': `Bearer ${localStorage.getItem('token')}` }
                 });
                 if (response.ok) {
-                    fetchTasks();
-                    fetchStats();
+                    await fetchTasks();
+                    await fetchStats();
+                } else if (response.status === 401 || response.status === 403) {
+                    localStorage.removeItem('token');
+                    window.location.href = '/sign-in.html';
                 } else {
-                    alert('خطأ أثناء إتمام المهمة');
+                    const errorData = await response.json();
+                    alert(errorData.error || 'خطأ أثناء إتمام المهمة');
                 }
             } catch (error) {
                 console.error('Error:', error);
                 alert('حدث خطأ. حاول مرة أخرى.');
+            } finally {
+                hideLoading();
             }
         }
 
         async function deleteTask(taskId) {
+            showLoading();
             try {
                 const response = await fetch(`/api/tasks/${taskId}`, {
                     method: 'DELETE',
                     headers: { 'Authorization': `Bearer ${localStorage.getItem('token')}` }
                 });
                 if (response.ok) {
-                    fetchTasks();
+                    await fetchTasks();
+                } else if (response.status === 401 || response.status === 403) {
+                    localStorage.removeItem('token');
+                    window.location.href = '/sign-in.html';
                 } else {
-                    alert('خطأ أثناء حذف المهمة');
+                    const errorData = await response.json();
+                    alert(errorData.error || 'خطأ أثناء حذف المهمة');
                 }
             } catch (error) {
                 console.error('Error:', error);
                 alert('حدث خطأ. حاول مرة أخرى.');
+            } finally {
+                hideLoading();
             }
         }
 
