--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول - Solo Leveling</title>
+    <title>مرحبًا بك - Solo Leveling</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,15 +32,12 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
+            overflow: hidden;
         }
+
         .glow { box-shadow: 0 0 15px var(--glow-color); }
-        .input-glow:focus {
-            outline: none;
-            box-shadow: 0 0 10px var(--glow-color);
-            border-color: var(--primary-color) !important;
-        }
         .btn {
-            padding: 0.5rem 1rem;
+            padding: 0.75rem 1.5rem;
             border-radius: 0.375rem;
             font-weight: bold;
             transition: all 0.2s ease-in-out;
@@ -54,20 +51,39 @@
         }
         .btn-primary:hover {
             background-color: var(--primary-color);
-            box-shadow: 0 0 10px var(--glow-color);
+            box-shadow: 0 0 15px var(--glow-color);
+            transform: scale(1.05);
         }
-        .error-message {
-            color: var(--danger-color);
-            text-shadow: 0 0 3px rgba(255, 77, 77, 0.5);
+
+        .typewriter {
+            overflow: hidden;
+            white-space: nowrap;
+            animation: typing 3s steps(40, end) forwards;
+        }
+
+        @keyframes typing {
+            from { width: 0; }
+            to { width: 100%; }
+        }
+
+        .bg-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle, rgba(0, 229, 255, 0.1) 0%, transparent 70%);
+            z-index: 0;
         }
     </style>
 </head>
 <body>
+    <div class="bg-overlay"></div>
     <header class="p-4 border-b border-[var(--border-color)] text-center glow sticky top-0 bg-[var(--background-medium)]/80 backdrop-blur-sm z-10">
         <div class="flex justify-between items-center">
             <h1 class="text-xl md:text-2xl font-bold">[ Solo Leveling ]</h1>
             <div id="auth-area">
-                <button id="signin-button" class="btn btn-primary glow text-sm hidden">تسجيل الدخول</button>
+                <button id="start-button" class="btn btn-primary glow text-sm hidden">Start Now</button>
                 <span id="user-id" class="text-sm font-semibold text-[var(--text-muted-color)] hidden">ID: <span id="user-id-value"></span></span>
             </div>
         </div>
@@ -75,36 +91,20 @@
     <div id="loading-spinner" class="fixed inset-0 flex items-center justify-center bg-[var(--background-dark)]/50 hidden z-50">
         <i class="fas fa-spinner fa-spin text-4xl text-[var(--primary-color)]"></i>
     </div>
-    <main class="flex-grow flex items-center justify-center">
-        <div class="bg-[var(--background-light)]/95 border border-[var(--border-color)] rounded-lg p-8 shadow-xl glow max-w-md w-full mx-4">
-            <h1 class="text-2xl font-bold text-center mb-6 border-b border-[var(--border-color)]/50 pb-2">تسجيل الدخول</h1>
-            <form id="signin-form" class="space-y-4">
-                <div>
-                    <label for="email" class="block text-sm font-medium mb-1 text-[var(--text-muted-color)]">البريد الإلكتروني:</label>
-                    <input type="email" id="email" required class="w-full bg-gray-800/70 border border-[var(--border-color)]/80 rounded-md px-3 py-2 text-white placeholder-gray-500 focus:outline-none input-glow transition duration-300" placeholder="أدخل بريدك الإلكتروني" />
-                </div>
-                <div>
-                    <label for="password" class="block text-sm font-medium mb-1 text-[var(--text-muted-color)]">كلمة المرور:</label>
-                    <input type="password" id="password" required class="w-full bg-gray-800/70 border border-[var(--border-color)]/80 rounded-md px-3 py-2 text-white placeholder-gray-500 focus:outline-none input-glow transition duration-300" placeholder="أدخل كلمة المرور" />
-                </div>
-                <p id="error-message" class="text-sm error-message hidden"></p>
-                <button type="submit" class="w-full btn btn-primary glow">تسجيل الدخول</button>
-            </form>
-            <p class="text-center text-sm text-[var(--text-muted-color)] mt-4">
-                ليس لديك حساب؟ <a href="sign-up.html" class="text-[var(--primary-color)] hover:underline">إنشاء حساب</a>
-            </p>
+    <main class="flex-grow flex items-center justify-center relative z-10">
+        <div class="text-center space-y-8">
+            <h1 class="text-3xl md:text-5xl font-bold typewriter inline-block">Embark on Your Epic Journey!</h1>
+            <p class="text-lg text-[var(--text-muted-color)] max-w-md mx-auto">Level up your life with challenges inspired by Solo Leveling. Are you ready to become the ultimate hunter?</p>
+            <button id="action-button" class="btn btn-primary glow text-lg">Start Now</button>
         </div>
     </main>
 
     <script>
-        const signinForm = document.getElementById('signin-form');
-        const emailInput = document.getElementById('email');
-        const passwordInput = document.getElementById('password');
-        const errorMessage = document.getElementById('error-message');
-        const loadingSpinner = document.getElementById('loading-spinner');
-        const signinButton = document.getElementById('signin-button');
+        const startButton = document.getElementById('start-button');
+        const actionButton = document.getElementById('action-button');
         const userIdSpan = document.getElementById('user-id');
         const userIdValue = document.getElementById('user-id-value');
+        const loadingSpinner = document.getElementById('loading-spinner');
 
         function showLoading() {
             loadingSpinner.classList.remove('hidden');
@@ -114,24 +114,17 @@
             loadingSpinner.classList.add('hidden');
         }
 
-        function showError(message) {
-            errorMessage.textContent = message;
-            errorMessage.classList.remove('hidden');
-        }
-
-        function hideError() {
-            errorMessage.classList.add('hidden');
-        }
-
         function updateAuthArea() {
             const token = localStorage.getItem('token');
             const userId = localStorage.getItem('userId');
             if (token && userId) {
-                signinButton.classList.add('hidden');
+                startButton.classList.add('hidden');
+                actionButton.textContent = 'Continue Journey';
                 userIdValue.textContent = userId;
                 userIdSpan.classList.remove('hidden');
             } else {
-                signinButton.classList.remove('hidden');
+                startButton.classList.remove('hidden');
+                actionButton.textContent = 'Start Now';
                 userIdSpan.classList.add('hidden');
             }
         }
@@ -165,43 +158,16 @@
             }
         }
 
-        signinButton.addEventListener('click', () => {
+        startButton.addEventListener('click', () => {
             window.location.href = '/sign-in.html';
         });
 
-        signinForm.addEventListener('submit', async (event) => {
-            event.preventDefault();
-            const email = emailInput.value.trim();
-            const password = passwordInput.value.trim();
-
-            if (!email || !password) {
-                showError('البريد الإلكتروني وكلمة المرور مطلوبان');
-                return;
-            }
-
-            showLoading();
-            hideError();
-
-            try {
-                const response = await fetch('/api/auth/signin', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ email, password })
-                });
-
-                const data = await response.json();
-                if (response.ok) {
-                    localStorage.setItem('token', data.token);
-                    localStorage.setItem('userId', data.userId);
-                    window.location.href = '/dashboard.html';
-                } else {
-                    showError(data.error || 'خطأ أثناء تسجيل الدخول');
-                }
-            } catch (error) {
-                console.error('Signin error:', error);
-                showError('حدث خطأ. حاول مرة أخرى.');
-            } finally {
-                hideLoading();
+        actionButton.addEventListener('click', () => {
+            const token = localStorage.getItem('token');
+            if (token) {
+                window.location.href = '/dashboard.html';
+            } else {
+                window.location.href = '/sign-in.html';
             }
         });
 
